hw_7: refactor ListStorage and associated tests for readability
- Improved indentation in `ListStorage` for better readability.
- Added missing `exists` method to `ListStorage`.
- Updated imports and formatting in `AbstractStorageTest` for consistency.